Fix for x overflow on mobile

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,7 @@
 html, body {
     min-height: 100%;
     max-width: 100%;
+    position: relative;
     overflow-x: hidden;
 }
 
